--- a/functions.ipynb
+++ b/functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "aa08bd04",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "1bf61e43",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "a3292807",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "4812662a",
    "metadata": {},
    "outputs": [
@@ -59,18 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dfac935b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, ! Welcome to the Python world.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Parameters : variables listed in the function defination (placeholders)\n",
     "#Arguments : values passed to the function (actual values)\n",
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "968e23e2",
    "metadata": {},
    "outputs": [],
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bf7adf15",
    "metadata": {},
    "outputs": [
@@ -115,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1c2137ca",
    "metadata": {},
    "outputs": [],
@@ -125,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c0aff78f",
    "metadata": {},
    "outputs": [],
@@ -138,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a8330ac6",
    "metadata": {},
    "outputs": [
@@ -156,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "81cef581",
    "metadata": {},
    "outputs": [
@@ -302,6 +294,155 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f2dc9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lambda function : small anonymous function\n",
+    "add_three = lambda a,b,c :( a+b+c)\n",
+    "add_three(5,10,15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57b53360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<map object at 0x0000013CFC636050>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[25, 100, 225, 400]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Map Function \n",
+    "#The map() function applies a given function to all items in an input list (or any iterable) and returns an iterator.\n",
+    "\n",
+    "nos = [5,10,15,20]\n",
+    "squared_nos = map(lambda x:x**2,nos)\n",
+    "print(squared_nos)\n",
+    "list(squared_nos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ffa6acbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 4, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "##fFilter Function\n",
+    "numbers = [1,2,2,3,4,4,5,6,7,8,9,10 ]\n",
+    "even_numbers = filter(lambda x: x % 2 == 0, numbers)\n",
+    "print(list(even_numbers))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1cf7c160",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 4, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_even(n):\n",
+    "  return n % 2 == 0\n",
+    "\n",
+    "even_numbers1= filter(is_even, numbers)\n",
+    "print(list(even_numbers1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d6e398b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 3, 4, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[4, 4, 16, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers)\n",
+    "result = map(lambda x: x**2, filter(is_even, numbers))\n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f7327365",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6: laptop\n",
+      "7: tablet\n",
+      "8: smartphone\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Enumerate Function\n",
+    "#functions add a counter to an iterable and returns it as an enumerate object which yeidls pairs of index and element durin iteration \n",
+    "#enumerate(iterable, start=0)\n",
+    "\n",
+    "devices = ['laptop', 'tablet', 'smartphone'\n",
+    "           ]\n",
+    "for index, device in enumerate(devices, start=6):\n",
+    "    print(f\"{index}: {device}\")"
+   ]
   }
  ],
  "metadata": {
