--- a/oop.ipynb
+++ b/oop.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b936a933",
    "metadata": {},
    "outputs": [
@@ -42,6 +42,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "student1 = Student()\n",
     "student1.name =\"John\"\n",
     "print(student1.name)\n",
@@ -51,6 +53,64 @@
     "student2.name = \"Jane\"\n",
     "print(student2.name)\n",
     "print(student2.school_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2e0e6d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BankAccount:\n",
+    "    def __init__(self,account_holder, balance=0):\n",
+    "#Initialize account holder and balance attribute while creating an object\n",
+    "        self.account_holder = account_holder\n",
+    "        self.balance = balance\n",
+    "\n",
+    "    def deposit(self,amount):\n",
+    "        if amount > 0 :\n",
+    "            self.balance = self.balance+amount\n",
+    "            print(f\"Deposited amount is {amount}.New balance is {self.balance}\")\n",
+    "    def withdraw(self,amount):\n",
+    "        if 0< amount <= self.balance :\n",
+    "            self.balance = self.balance-amount\n",
+    "            print(f\"Withdrawn amount is {amount}.New balance is {self.balance}\")  \n",
+    "        else:\n",
+    "            print(\"Insufficient balance or invalid amount\")\n",
+    "    def get_balance(self):\n",
+    "        return self.balance    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cc4c6e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "account1 = BankAccount(\"ram\",1200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "005965e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1200"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "account1.get_balance()"
    ]
   },
   {
