Add NumPy array creation, indexing, and basic operations examples

--- a/random.ipynb
+++ b/random.ipynb
@@ -84,6 +84,412 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "c50d128b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zero array:\n",
+      " [[0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]]\n",
+      "Ones array:\n",
+      " [[[1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]]]\n",
+      "Array using arange:\n",
+      " [10 20 30 40 50]\n",
+      "Array using linspace:\n",
+      " [10. 20. 30. 40. 50.]\n",
+      "Random array:\n",
+      " [[0.94904604 0.98672128 0.26825362 0.88912307]\n",
+      " [0.44518936 0.48652778 0.89211701 0.98874566]\n",
+      " [0.69669928 0.44089874 0.45766296 0.11727313]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#creating Arrays using built-in functions\n",
+    "zero_array = np.zeros((5,6)) \n",
+    "print(\"Zero array:\\n\",zero_array)\n",
+    "\n",
+    "ones_array = np.ones((2,3,4)) #2 blocks ,3 rows ,4 columns\n",
+    "print(\"Ones array:\\n\",ones_array)\n",
+    "\n",
+    "np_array = np.arange(10,51,10)  #start,stp,step\n",
+    "print(\"Array using arange:\\n\",np_array)\n",
+    "\n",
+    "linspace_array =np.linspace(10,50,5) #start,stop,no of elements\n",
+    "print(\"Array using linspace:\\n\",linspace_array)\n",
+    "\n",
+    "random = np.random.rand(3,4) #3 rows ,4 columns\n",
+    "print(\"Random array:\\n\",random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcbf0c14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Array Indexing and Slicing\n",
+    "#arr[start:stop:step] 1D Slicing\n",
+    "#arr[row_slice,col_slice] 2D Slicing\n",
+    "#arr[block_slice,row_slice,col_slice] 3D Slicing\n",
+    "#arr[indices] Fancy Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cc8f179c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 5)\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "scores = np.array([[55, 89, 76, 92, 85],\n",
+    "                  [10,110,202,2,3],\n",
+    "                  [2,34,5,6,7]])\n",
+    "print(scores.shape)\n",
+    "print(scores.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0c2b4102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acessing the score of the 2nd student:[ 10 110 202   2   3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Acessing the score of the 2nd student:{scores[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d4f361a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores of the first three students:[[ 55  89  76  92  85]\n",
+      " [ 10 110 202   2   3]\n",
+      " [  2  34   5   6   7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Slicing Examples\n",
+    "print(f\"Scores of the first three students:{scores[0:3]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e8976c90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 89,  76,  92],\n",
+       "       [110, 202,   2],\n",
+       "       [ 34,   5,   6]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores[:,1:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3bc7c7d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 55  89  76  92  85]\n",
+      " [ 10 110 202   2   3]\n",
+      " [  2  34   5   6   7]]\n",
+      "[False False False]\n",
+      "Students who scored more than 80 []\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scores)\n",
+    "\n",
+    "#Bolean Indexing - Students ho scored >=80 in 1st subject\n",
+    "condition = scores[:,0] >=80\n",
+    "print(condition)\n",
+    "high_scores = scores[condition]\n",
+    "print(f\"Students who scored more than 80 {high_scores}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1ed5f69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected students scores:\n",
+      "[[ 55  89  76  92  85]\n",
+      " [ 10 110 202   2   3]\n",
+      " [  2  34   5   6   7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#fancy Indexing - accessing specific students\n",
+    "import numpy as np\n",
+    "scores = np.array([[55, 89, 76, 92, 85],\n",
+    "                  [10,110,202,2,3],\n",
+    "                  [2,34,5,6,7]])\n",
+    "student_indices =[0,1,2] #1st ,2nd and 3rd students\n",
+    "selected_students = scores[student_indices]\n",
+    "print(f\"Selected students scores:\\n{selected_students}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4b18c866",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22 57 76  8]\n",
+      "[ -2 -11 -10   0]\n",
+      "[ 120  782 1419   16]\n",
+      "[0.83333333 0.67647059 0.76744186 1.        ]\n",
+      "[ 100  529 1089   16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([10,23,33,4])\n",
+    "b= np.array([12,34,43,4])\n",
+    "print(a+b) #Element wise addition\n",
+    "print(a-b) #Element wise subtraction\n",
+    "print(a*b) #Element wise multiplication\n",
+    "print(a/b) #Element wise division\n",
+    "print(a**2) #Element wise exponentiation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e324b2a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result after broadcasting:\n",
+      "[[ 10  40  90]\n",
+      " [ 40 100 180]\n",
+      " [ 70 160 270]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Broadcasting example\n",
+    "#Broadcating performs operations on array of different shapes\n",
+    "#It automatically expands the smaller array along the dimensions  of larger array so that they have compatiblle shapes\n",
+    "\n",
+    "matrix = np.array([[1,2,3],\n",
+    "                   [4,5,6],\n",
+    "                   [7,8,9]])\n",
+    "row = np.array([10,20,30])\n",
+    "#row of matrix:3 columns of matrix:3\n",
+    "#Rows of row vector :1,columns of row vector:3\n",
+    "\n",
+    "#Add row to each row of matrix\n",
+    "result = matrix*row\n",
+    "print(f\"Result after broadcasting:\\n{result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd7c4a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Matrix Operations\n",
+    "#Dot Product,Transpose,Matrix Inverse , Determinant,EigenValues ,Eigen Vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2dd05956",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot Product of A and B:\n",
+      "[[ 30  24  18]\n",
+      " [ 84  69  54]\n",
+      " [138 114  90]]\n",
+      "Dot Product of A and B using @ operator:\n",
+      "[[ 30  24  18]\n",
+      " [ 84  69  54]\n",
+      " [138 114  90]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2,3],\n",
+    "              [4,5,6],\n",
+    "              [7,8,9]])\n",
+    "B= np.array([[9,8,7],\n",
+    "              [6,5,4],\n",
+    "                [3,2,1]])\n",
+    "dot_product = np.dot(A,B)\n",
+    "print(f\"Dot Product of A and B:\\n{dot_product}\")\n",
+    "\n",
+    "dot_product2 = A @ B\n",
+    "print(f\"Dot Product of A and B using @ operator:\\n{dot_product2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5487c909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "Transpose of A:\n",
+      "[[1 4 7]\n",
+      " [2 5 8]\n",
+      " [3 6 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)\n",
+    "transpose_A = np.transpose(A)\n",
+    "print(f\"Transpose of A:\\n{transpose_A}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b08feed",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LinAlgError",
+     "evalue": "Singular matrix",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mLinAlgError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mInverse of A:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlinalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#verifying A*A_INV = I\u001b[39;00m\n\u001b[32m      4\u001b[39m A_inv = np.linalg.inv(A)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\rashm\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\numpy\\linalg\\_linalg.py:669\u001b[39m, in \u001b[36minv\u001b[39m\u001b[34m(a)\u001b[39m\n\u001b[32m    666\u001b[39m signature = \u001b[33m'\u001b[39m\u001b[33mD->D\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m isComplexType(t) \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33md->d\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    667\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m errstate(call=_raise_linalgerror_singular, invalid=\u001b[33m'\u001b[39m\u001b[33mcall\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    668\u001b[39m               over=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, divide=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, under=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m669\u001b[39m     ainv = \u001b[43m_umath_linalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignature\u001b[49m\u001b[43m=\u001b[49m\u001b[43msignature\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    670\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m wrap(ainv.astype(result_t, copy=\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\rashm\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\numpy\\linalg\\_linalg.py:163\u001b[39m, in \u001b[36m_raise_linalgerror_singular\u001b[39m\u001b[34m(err, flag)\u001b[39m\n\u001b[32m    162\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_raise_linalgerror_singular\u001b[39m(err, flag):\n\u001b[32m--> \u001b[39m\u001b[32m163\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[33m\"\u001b[39m\u001b[33mSingular matrix\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mLinAlgError\u001b[39m: Singular matrix"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Inverse of A:\\n{np.linalg.inv(A)}\")\n",
+    "\n",
+    "#verifying A*A_INV = I\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "identity = np.dot(A,A_inv)\n",
+    "print(f\"Product of A and its Inverse (should be identity matrix):\\n{identity}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ea4826e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant of A: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "det_A = np.linalg.det(A)\n",
+    "print(f\"Determinant of A: {det_A}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "9ce64534",
    "metadata": {},
